# NEXTGenSim

./: .gitignore  ACKNOWLEDGEMENT  Makefile.am  README.md  configure.ac  nntf_specification.txt
src/: nextgensim.cpp
src/archdatamodel/: compute.cpp  compute.h  hardware.cpp  hardware.h  memory.cpp  memory.h  node.cpp  node.h  partitionlist.cpp  partitionlist.h  resource.cpp  resource.h  storage.cpp  storage.h
src/datamining/: classifier.cpp  classifier.h  discretizer.cpp  discretizer.h  wekac45.cpp  wekac45.h  wekaclassifier.cpp  wekaclassifier.h  wekadiscretizer.cpp  wekadiscretizer.h  wekaefdiscretizer.cpp  wekaefdiscretizer.h  wekaeldiscretizer.cpp  wekaeldiscretizer.h  wekaid3.cpp  wekaid3.h  wekaobject.cpp  wekaobject.h
src/predictors/: historicalifier.cpp  historicalifier.h  preddeadlinemissmanager.cpp  preddeadlinemissmanager.h  preddeadlinemissmanagerexp.cpp  preddeadlinemissmanagerexp.h  preddeadlinemissmanagergradual.cpp  preddeadlinemissmanagergradual.h  prediction.cpp  prediction.h  predictor.cpp  predictor.h  userruntimeestimatepred.cpp  userruntimeestimatepred.h
src/scheduling/: fcfsschedulingpolicy.cpp  fcfsschedulingpolicy.h  job.cpp  job.h  joballocation.cpp  joballocation.h  jobrequirement.cpp  jobrequirement.h  metric.cpp  metric.h  partition.cpp  partition.h  policyentitycollector.cpp  policyentitycollector.h  powerconsumption.cpp  powerconsumption.h  relationshipaggregatedinfo.cpp  relationshipaggregatedinfo.h  reservationtable.cpp  reservationtable.h  resourceaggregatedinfo.cpp  resourceaggregatedinfo.h  resourcebucket.cpp  resourcebucket.h  resourcejoballocation.cpp  resourcejoballocation.h  resourcereservationtable.cpp  resourcereservationtable.h  resourceschedulingpolicy.cpp  resourceschedulingpolicy.h  resourceusage.cpp  resourceusage.h  schedulingpolicy.cpp  schedulingpolicy.h  simulation-new.cpp  simulation.cpp  simulation.h  simulationevent.cpp  simulationevent.h  simulatorcharacteristics.cpp  (+11 more)
src/statistics/: accumulate.cpp  accumulate.h  accumulateliterals.cpp  accumulateliterals.h  average.cpp  average.h  countliterals.cpp  countliterals.h  interquartiledifference.cpp  interquartiledifference.h  max.cpp  max.h  median.cpp  median.h  min.cpp  min.h  percentile95.cpp  percentile95.h  percentiles.cpp  percentiles.h  process.cpp  process.h  processconstant.cpp  processconstant.h  processerlang.cpp  processerlang.h  processexponential.cpp  processexponential.h  processgeometric.cpp  processgeometric.h  processlognormal.cpp  processlognormal.h  processnormal.cpp  processnormal.h  processpoisson.cpp  processpoisson.h  processtriangular.cpp  processtriangular.h  processuniform.cpp  processuniform.h  (+10 more)
src/utils/: architectureconfiguration.cpp  architectureconfiguration.h  arg_parser.cpp  arg_parser.h  configurationfile.cpp  configurationfile.h  csvpolicyinfoconverter.cpp  csvpolicyinfoconverter.h  cvsconverter.cpp  cvsconverter.h  cvsjobsinfoconverter.cpp  cvsjobsinfoconverter.h  cvsstreamer.cpp  cvsstreamer.h  estimatedruntimejobqueue.cpp  estimatedruntimejobqueue.h  estimatefinishjobqueue.cpp  estimatefinishjobqueue.h  executecommand.cpp  executecommand.h  fcfsjobqueue.cpp  fcfsjobqueue.h  jobcsvrscriptanaliser.cpp  jobcsvrscriptanaliser.h  jobqueue.cpp  jobqueue.h  log.cpp  log.h  lxwfjobqueue.cpp  lxwfjobqueue.h  matrix.cpp  matrix.h  nntfInput.cpp  nntfInput.h  otf2trace.cpp  otf2trace.h  paraverentry.cpp  paraverentry.h  paravertrace.cpp  paravertrace.h  (+20 more)
